@@ -4,14 +4,14 @@ Version:	@VERSION@
 Release:	1
 License:	GPL
 Group:		Applications/Multimedia
-Source:		%{name}-%{version}.tar.gz
+Source:		%{name}-%{version}.tar.bz2
 BuildRoot:	%{_tmppath}/%{name}-%{version}-root
 Requires:	libmusicbrainz >= 2.0.1
 Requires:	libgnomeui >= 2.0.0
 Requires:	glib2 >= 2.0.0
 Requires:	gstreamer >= 0.8.0
 Requires:	GConf2 >= 2.0.0
-Requires:	gstreamer-plugins >= 0.7.2
+Requires:	gstreamer-plugins-base >= 0.7.2
 BuildRequires:	libmusicbrainz-devel >= 2.0.1
 BuildRequires:	libgnomeui-devel >= 2.0.0
 BuildRequires:	glib2-devel >= 2.0.0
@@ -37,6 +37,8 @@ unset GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL
 
 # Clean out bad files
 rm -rf $RPM_BUILD_ROOT%{_localstatedir}/scrollkeeper
+# the icon-theme.cache should be in the icon-theme package
+rm -rf $RPM_BUILD_ROOT/usr/share/icons/hicolor/icon-theme.cache
 
 %find_lang sound-juicer
 
@@ -58,11 +60,22 @@ gconftool-2 --makefile-install-rule %{_sysconfdir}/gconf/schemas/sound-juicer.sc
 %{_sysconfdir}/gconf/schemas/sound-juicer.schemas
 %{_datadir}/sound-juicer
 %{_datadir}/applications/sound-juicer.desktop
-%{_datadir}/pixmaps/sound-juicer.png
+%{_datadir}/icons/hicolor/16x16
+%{_datadir}/icons/hicolor/22x22
+%{_datadir}/icons/hicolor/24x24
+%{_datadir}/icons/hicolor/32x32
+%{_datadir}/icons/hicolor/48x48
+%{_datadir}/icons/hicolor/scalable
 %{_datadir}/gnome/help
 %{_datadir}/omf
+%{_datadir}/man/man1
 
 %changelog
+* Wed Jan 30 2008 Phil Long <plong@mitre.org>
+- change .tar.gz to .tar.bz2
+- fix the icons - remove /pixmaps/sound-juicer.png, add the new gnome 2.20 ones
+- add the man file
+
 * Sun Feb 29 2004 Christian Schaller <Uraeus@gnome.org>
 - Add versioning to gstreamer req
 
