@@ -1,3 +1,8 @@
+2008-03-07  Ross Burton  <ross@burtonini.com>
+
+	* sound-juicer.spec.in:
+	Updated spec file (thanks Phil Long)
+
 2008-03-05  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-prefs.c:
